# NewtonSpect

./: .gitignore  LICENSE  README.md  build.py
backend/: .env.example  pyproject.toml  requirements.txt  worker.py
backend/app/: __init__.py  bootstrap.py  config.py  db.py  main.py  repository.py  schemas.py
backend/app/api/: __init__.py  extended.py  jobs.py
backend/app/services/: __init__.py  asr.py  exporter.py  insights.py  knowledge_base.py  mask_overlay.py  media.py  ollama_client.py  openvino_people.py  paths.py  pipeline.py  reporting.py  shorts.py  speaker.py  subtitles.py  translator.py  types.py
backend/tests/: test_api.py  test_media.py  test_name_extraction.py  test_pipeline_integration.py  test_repository.py  test_subtitles.py
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
scripts/: run_api.ps1  run_frontend.ps1  run_worker.ps1
